--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/tailwindcss": "^6.10.1",
     "daisyui": "latest",
     "nuxt": "^3.8.2",
+    "sass": "^1.69.5",
     "vue": "^3.3.10",
     "vue-router": "^4.2.5"
   }
